Fix glitch link position on mobile

--- a/src/_assets/scss/inc/demos.scss
+++ b/src/_assets/scss/inc/demos.scss
@@ -39,7 +39,7 @@
 
 .glitch__link {
 	position: absolute;
-	bottom: 0.2rem;
+	bottom: 0.4rem;
 	right: 0.4rem;
 	@include bp(s) {
 		bottom: 0.6rem;
